force-app/main/default/objects/Contact/fields/Acccont_Country__c.field-meta.xml
<CustomField>
    <fullName>Acccont_Country__c</fullName>
    <label>Acccont Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>