force-app/main/default/objects/Contact/fields/isactive__c.field-meta.xml
<CustomField>
    <fullName>isactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isactive</label>
    <type>Checkbox</type>
</CustomField>