force-app/main/default/objects/Contact/fields/pr__c.field-meta.xml
<CustomField>
    <fullName>pr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Buyer</label>
    <type>Checkbox</type>
</CustomField>